objects/Survey_Result__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seller__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Seller</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Complete</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Store__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Store</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Store</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Survey</label>
        <referenceTo>Survey__c</referenceTo>
        <relationshipLabel>Survey Results</relationshipLabel>
        <relationshipName>Survey_Results</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Score__c</fullName>
        <label>Total Score</label>
        <summarizedField>Survey_Result_Detail__c.Score__c</summarizedField>
        <summaryForeignKey>Survey_Result_Detail__c.Survey_Result__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Survey Result</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Store__c</columns>
        <columns>Survey__c</columns>
        <columns>Seller__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Survey Result Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Survey Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>